using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Assets.Scripts
{
    internal class AnimationString
    {
        internal static string isMoving = "isMoving";
        internal static string isRunning = "isRunning";
        internal static string isGrounded = "isGrounded";
        internal static string yVelocity = "yVelocity";
        internal static string jumpTrigger = "jump";
        internal static string isOnCeiling = "isOnCeiling";
        internal static string isOnWall = "isOnWall";
        internal static string isWallSliding = "isWallSliding";
        internal static string attackTrigger = "attack";
        internal static string canMove = "canMove";
        internal static string hasTarget = "hasTarget";
        internal static string isAlive = "isAlive";
        internal static string isDashingTrigger = "isDashing";
        internal static string hitTrigger = "isHit";
    }
}
